--- a/player.html
+++ b/player.html
@@ -32,8 +32,8 @@
         <![endif]-->
         <script>
             // Set Server options here
-            var streamName = "" // Station name
-            var streamAddress = "" // Streaming server address
+            var streamName = ""; // Station name
+            var streamAddress = ""; // Streaming server address
             var streamPort  = 80; // Streaming server port
             var mp3Mount = ""; // Leave empty if shoutcast; no /
             var oggMount = ""; // Leave empty if you don't have an ogg stream; no /
